# interflect

./: .gitignore  AGENTS.md  CLAUDE.md  PHILOSOPHY.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: interflect-apply.md  interflect-review.md  interflect.md
src/interflect/: __init__.py  appliers.py  cli.py  proposals.py  sources.py  taxonomy.py
tests/: test_appliers.py  test_cli.py  test_proposals.py  test_sources.py  test_taxonomy.py
tests/fixtures/: lessons.jsonl  operational_procedures.jsonl  session_summaries.jsonl
tests/structural/: test_structure.py
