[project]
name = "interflect"
version = "0.1.0"
requires-python = ">=3.10"
description = "Retrospective compounding plugin/lane for reviewable lesson promotion proposals."
license = "MIT"
authors = [{ name = "MK", email = "mistakeknot@vibeguider.org" }]
keywords = ["reflection", "retrospective", "agent-memory", "interverse"]
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0"]

[project.scripts]
interflect = "interflect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interflect"]
